Fix possible corruption of results from SUBSTRING_INDEX(). (Bug #14676)

mysql-test/r/func_str.result:
  Add new results
mysql-test/t/func_str.test:
  Add new test
sql/item_strfunc.cc:
  Mark tmp_value in Item_func_substr_index as const so that we don't
  overwrite the contents of another String when getting the delimiter.
  Fix typo in variable names (delimeter -> delimiter).